# url-shortener

./: .env  Cargo.toml  Dockerfile  README.MD  dockerfile
resources/: application.yaml
src/: config.rs  main.rs
src/handlers/: mod.rs  ping.rs  url.rs
src/middleware/: basic_auth.rs  mod.rs  validation_handler.rs
src/models/: url.rs
src/utils/: shortener.rs
