[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
chrono = {version = "0.4.39", features = ["serde"]}
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4"
mongodb = "3.1.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
validator = { version = "0.19", features = ["derive"] }
